# ToxicPostDetection

./: .gitignore  ToxicPostDetection.code-workspace  config.ini  main.py  pyproject.toml  requerments.txt  start.bat
data/: dataset.txt.hash
notebooks/: DataMixedGenerator.ipynb  HateCommantaryDetection.ipynb  ImageDataLoading.ipynb  MixedDataLoader.ipynb  ModelTraining.ipynb  ModelTuning.ipynb  TextDataLoading.ipynb  ToxicClassificator.ipynb  VK_API.ipynb
src/api/: base_client.py  chat_client.py  exceptions.py  vk_api.py  wall_client.py
src/data_processing/: encoding.py  loader.py  preprocessing.py  text_dataset.py
src/models/: detoxify.py  hate_model.py  rubert.py
src/utils/: enviroment_test.py  environment.py  hashing.py
src/vk_mod/: __init__.py  const.py
src/vk_mod/api/: base_client.py  base_client_test.py  chat_client.py  chat_client_test.py  community_client.py  longpoll_client.py  users_client.py  vk_api.py  vk_api_test.py  wall_client.py
src/vk_mod/data/: __init__.py  dataset_generator.py  download.py  loader.py
src/vk_mod/data_processing/: __init__.py  encoding.py  loader.py  preprocessing.py  text_dataset.py
src/vk_mod/models/: __init.py  __init__.py  abstract.py  branch_abstract.py  branch_abstract_test.py  detoxify.py  hate_model.py  image_branch.py  post_classifier.py  rubert.py  text_branch.py  text_branch_use.py  toxic_classificator.py  tuning.py
src/vk_mod/preprocessing/: __init__.py  image.py  image_test.py  text.py  text_test.py
src/vk_mod/utils/: __init.py  __init__.py  enviroment_test.py  environment.py  exceptions.py  hashing.py
(+12 files in other folders)
